gitops/social-media/raw/11-microservice-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-java
  labels:
    app: microservice-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-java
  template:
    metadata:
      labels:
        app: microservice-java
    spec:
      containers:
        - name: microservice-java
          image: socialmediaapp-microservice-java:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
