gitops/social-media/raw/02-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
