gitops/social-media/raw/06-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-prod
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
