gitops/social-media/raw/08-microservice-go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-go
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: microservice-go
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
