gitops/social-media/raw/10-microservice-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-java
  labels:
    app: microservice-java
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  selector:
    app: microservice-java
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
