gitops/social-media/raw/15-cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  clusterIP: None
  selector:
    app: cassandra
  ports:
    - port: 9042
      targetPort: 9042
      name: cql
