gitops/social-media/raw/18-minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app: minio
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console
      protocol: TCP
      port: 9004
      targetPort: 9004
  type: ClusterIP
